devops/k8s_dev/01_namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: myeconomics
  finalizers:
  labels:
    name: myeconomics
    kubernetes.io/metadata.name: myeconomics
spec:
  finalizers:
---
