devops/k8s_dev/04_application.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myeconomics-app
  namespace: myeconomics
  labels:
    app: myeconomics-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myeconomics-app
  template:
    metadata:
      labels:
        app: myeconomics-app
    spec:
      containers:
        - name: myeconomics-app
          image: docker.io/maravelias/myeconomics:0.0.1-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: ui8080
              protocol: TCP
          resources:
            limits:
              memory: 2Gi
              cpu: 1000m
            requests:
              memory: 1Gi
      dnsPolicy: ClusterFirst
      restartPolicy: Always

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-deployment
  namespace: myeconomics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:latest
          ports:
            - containerPort: 80

---
